# dfine_kraken

./: README.md  pyproject.toml  setup.cfg
dfine/: configs.py  dataset.py  dfine.py  model.py
dfine/cli/: __init__.py  hpo.py  test.py  train.py  util.py
dfine/modules/: __init__.py  builder.py  criterion.py  hgnetv2.py  hybrid_encoder.py  utils.py
experiments/: config.yaml
